fixed spacing for the 2x2 column pattern and the 5 column pattern

--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -22,7 +22,7 @@ h3 {
 	font-family: $alt-header-font;
 	font-weight: 800;
 	color: $teal;
-	margin-bottom: 25px;
+	padding-bottom: 25px;
 }
 
 p {
